# rust-webgpu-procedural-universe

./: .gitignore
test1/: index.html
test1/src/: lib.rs  main.rs
test10/: Cargo.toml  Trunk.toml  index.html
test10/src/: lib.rs  shader.wgsl
test10/src/camera/: camera.rs  controller.rs  init.rs  mod.rs
test10/src/celestial_body/: geometry_loader.rs  mod.rs  worker.rs
test10/src/celestial_body/planet/: planet.wgsl  planet_descriptor.rs  planet_geometry.rs  planet_instance.rs  planet_vertex.rs  render_pipeline.rs
test10/src/celestial_body/star/: render_pipeline.rs  star.wgsl  star_geometry.rs  star_instance.rs  star_vertex.rs
test10/src/celestial_body_handle/: celestial_body.rs
test10/src/geometry/: compute_vertices.wgsl  fbm.rs  icosphere.rs  planet.rs
test10/src/manager/: manager.rs  mod.rs
test10/src/star/: mod.rs  star.rs
test10/src/stellar_system/: mod.rs  stellar_system.rs
test10/src/time/: mod.rs  time.rs
test2/: Cargo.toml  index.html
test2/src/: lib.rs  shader.wgsl
test2/src/camera/: camera.rs
test2/src/geometry/: icosphere.rs  kdtree3d.rs  planet.rs
test2/src/star/: mod.rs  star.rs
test2/src/stellar_system/: mod.rs  stellar_system.rs
test3/: Cargo.toml
test3/src/: compute.wgsl  main.rs
test6/: Cargo.toml  index.html  index.js  worker.js
test6/src/: lib.rs
