[package]
name = "webworker-example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.99"
bytemuck = "1.23.2"
cgmath = "0.18.0"
console_log = "1.0.0"
env_logger = "0.11.8"
flume = "0.11.1"
glam = "0.30.5"
gloo-timers = "0.3.0"
log = "0.4.27"
pollster = "0.4.0"
rayon = { version = "1.11.0", optional = true }
wasm-bindgen-futures = "0.4.50"
# wgpu = { version = "26.0.1", features = ["webgl"] }
wgpu = "26.0.1"
winit = "0.30.12"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [
    "Blob",
    "BlobPropertyBag",
    "console",
    "DedicatedWorkerGlobalScope",
    "Document",
    "HtmlElement",
    "Location",
    "MessageEvent",
    "Node",
    "Text",
    "Url",
    "Window",
    "Worker",
] }
